--- a/source/config/config_f401_nucleo.ioc
+++ b/source/config/config_f401_nucleo.ioc
@@ -15,28 +15,56 @@ Mcu.Name=STM32F401R(D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB14
-Mcu.Pin11=PB15
-Mcu.Pin12=PC6
-Mcu.Pin13=PC7
-Mcu.Pin14=PC8
-Mcu.Pin15=PC9
-Mcu.Pin16=PA10
-Mcu.Pin17=PA11
-Mcu.Pin18=PA12
-Mcu.Pin19=PA13
+Mcu.Pin10=PA1
+Mcu.Pin11=PA2
+Mcu.Pin12=PA3
+Mcu.Pin13=PA4
+Mcu.Pin14=PA5
+Mcu.Pin15=PA6
+Mcu.Pin16=PA7
+Mcu.Pin17=PC4
+Mcu.Pin18=PC5
+Mcu.Pin19=PB0
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA14
-Mcu.Pin21=PB3
-Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin20=PB1
+Mcu.Pin21=PB2
+Mcu.Pin22=PB10
+Mcu.Pin23=PB12
+Mcu.Pin24=PB13
+Mcu.Pin25=PB14
+Mcu.Pin26=PB15
+Mcu.Pin27=PC6
+Mcu.Pin28=PC7
+Mcu.Pin29=PC8
 Mcu.Pin3=PH0 - OSC_IN
+Mcu.Pin30=PC9
+Mcu.Pin31=PA8
+Mcu.Pin32=PA9
+Mcu.Pin33=PA10
+Mcu.Pin34=PA11
+Mcu.Pin35=PA12
+Mcu.Pin36=PA13
+Mcu.Pin37=PA14
+Mcu.Pin38=PA15
+Mcu.Pin39=PC10
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA5
-Mcu.Pin8=PB12
-Mcu.Pin9=PB13
-Mcu.PinsNb=23
+Mcu.Pin40=PC11
+Mcu.Pin41=PC12
+Mcu.Pin42=PD2
+Mcu.Pin43=PB3
+Mcu.Pin44=PB4
+Mcu.Pin45=PB5
+Mcu.Pin46=PB6
+Mcu.Pin47=PB7
+Mcu.Pin48=PB8
+Mcu.Pin49=PB9
+Mcu.Pin5=PC0
+Mcu.Pin50=VP_SYS_VS_Systick
+Mcu.Pin6=PC1
+Mcu.Pin7=PC2
+Mcu.Pin8=PC3
+Mcu.Pin9=PA0-WKUP
+Mcu.PinsNb=51
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -53,6 +81,14 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+PA0-WKUP.GPIOParameters=GPIO_PuPd
+PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
+PA0-WKUP.Locked=true
+PA0-WKUP.Signal=GPIO_Input
+PA1.GPIOParameters=GPIO_PuPd
+PA1.GPIO_PuPd=GPIO_PULLUP
+PA1.Locked=true
+PA1.Signal=GPIO_Input
 PA10.GPIOParameters=GPIO_Speed,GPIO_Label
 PA10.GPIO_Label=DispReset
 PA10.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
@@ -78,6 +114,10 @@ PA14.GPIO_Label=TCK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.GPIOParameters=GPIO_PuPd
+PA15.GPIO_PuPd=GPIO_PULLUP
+PA15.Locked=true
+PA15.Signal=GPIO_Input
 PA2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA2.GPIO_Label=USART_TX
 PA2.GPIO_Mode=GPIO_MODE_AF_PP
@@ -94,6 +134,10 @@ PA3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA4.GPIOParameters=GPIO_PuPd
+PA4.GPIO_PuPd=GPIO_PULLUP
+PA4.Locked=true
+PA4.Signal=GPIO_Input
 PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA5.GPIO_Label=LD2 [Green Led]
 PA5.GPIO_Mode=GPIO_MODE_OUTPUT_PP
@@ -101,6 +145,34 @@ PA5.GPIO_PuPd=GPIO_NOPULL
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PA6.GPIOParameters=GPIO_PuPd
+PA6.GPIO_PuPd=GPIO_PULLUP
+PA6.Locked=true
+PA6.Signal=GPIO_Input
+PA7.GPIOParameters=GPIO_PuPd
+PA7.GPIO_PuPd=GPIO_PULLUP
+PA7.Locked=true
+PA7.Signal=GPIO_Input
+PA8.GPIOParameters=GPIO_PuPd
+PA8.GPIO_PuPd=GPIO_PULLUP
+PA8.Locked=true
+PA8.Signal=GPIO_Input
+PA9.GPIOParameters=GPIO_PuPd
+PA9.GPIO_PuPd=GPIO_PULLUP
+PA9.Locked=true
+PA9.Signal=GPIO_Input
+PB0.GPIOParameters=GPIO_PuPd
+PB0.GPIO_PuPd=GPIO_PULLUP
+PB0.Locked=true
+PB0.Signal=GPIO_Input
+PB1.GPIOParameters=GPIO_PuPd
+PB1.GPIO_PuPd=GPIO_PULLUP
+PB1.Locked=true
+PB1.Signal=GPIO_Input
+PB10.GPIOParameters=GPIO_PuPd
+PB10.GPIO_PuPd=GPIO_PULLUP
+PB10.Locked=true
+PB10.Signal=GPIO_Input
 PB12.GPIOParameters=GPIO_Speed,GPIO_Label
 PB12.GPIO_Label=Data4
 PB12.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
@@ -121,22 +193,88 @@ PB15.GPIO_Label=Data7
 PB15.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB15.Locked=true
 PB15.Signal=GPIO_Output
+PB2.GPIOParameters=GPIO_PuPd
+PB2.GPIO_PuPd=GPIO_PULLUP
+PB2.Locked=true
+PB2.Signal=GPIO_Input
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
+PB4.GPIOParameters=GPIO_PuPd
+PB4.GPIO_PuPd=GPIO_PULLUP
+PB4.Locked=true
+PB4.Signal=GPIO_Input
+PB5.GPIOParameters=GPIO_PuPd
+PB5.GPIO_PuPd=GPIO_PULLUP
+PB5.Locked=true
+PB5.Signal=GPIO_Input
+PB6.GPIOParameters=GPIO_PuPd
+PB6.GPIO_PuPd=GPIO_PULLUP
+PB6.Locked=true
+PB6.Signal=GPIO_Input
+PB7.GPIOParameters=GPIO_PuPd
+PB7.GPIO_PuPd=GPIO_PULLUP
+PB7.Locked=true
+PB7.Signal=GPIO_Input
+PB8.GPIOParameters=GPIO_PuPd
+PB8.GPIO_PuPd=GPIO_PULLUP
+PB8.Locked=true
+PB8.Signal=GPIO_Input
+PB9.GPIOParameters=GPIO_PuPd
+PB9.GPIO_PuPd=GPIO_PULLUP
+PB9.Locked=true
+PB9.Signal=GPIO_Input
+PC0.GPIOParameters=GPIO_PuPd
+PC0.GPIO_PuPd=GPIO_PULLUP
+PC0.Locked=true
+PC0.Signal=GPIO_Input
+PC1.GPIOParameters=GPIO_PuPd
+PC1.GPIO_PuPd=GPIO_PULLUP
+PC1.Locked=true
+PC1.Signal=GPIO_Input
+PC10.GPIOParameters=GPIO_PuPd
+PC10.GPIO_PuPd=GPIO_PULLUP
+PC10.Locked=true
+PC10.Signal=GPIO_Input
+PC11.GPIOParameters=GPIO_PuPd
+PC11.GPIO_PuPd=GPIO_PULLUP
+PC11.Locked=true
+PC11.Signal=GPIO_Input
+PC12.GPIOParameters=GPIO_PuPd
+PC12.GPIO_PuPd=GPIO_PULLUP
+PC12.Locked=true
+PC12.Signal=GPIO_Input
 PC13-ANTI_TAMP.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC13-ANTI_TAMP.GPIO_Label=B1 [Blue PushButton]
 PC13-ANTI_TAMP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PC13-ANTI_TAMP.GPIO_PuPd=GPIO_NOPULL
 PC13-ANTI_TAMP.Locked=true
 PC13-ANTI_TAMP.Signal=GPXTI13
+PC14-OSC32_IN.GPIOParameters=GPIO_PuPd
+PC14-OSC32_IN.GPIO_PuPd=GPIO_PULLUP
 PC14-OSC32_IN.Locked=true
-PC14-OSC32_IN.Mode=LSE-External-Oscillator
-PC14-OSC32_IN.Signal=RCC_OSC32_IN
+PC14-OSC32_IN.Signal=GPIO_Input
+PC15-OSC32_OUT.GPIOParameters=GPIO_PuPd
+PC15-OSC32_OUT.GPIO_PuPd=GPIO_PULLUP
 PC15-OSC32_OUT.Locked=true
-PC15-OSC32_OUT.Mode=LSE-External-Oscillator
-PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC15-OSC32_OUT.Signal=GPIO_Input
+PC2.GPIOParameters=GPIO_PuPd
+PC2.GPIO_PuPd=GPIO_PULLUP
+PC2.Locked=true
+PC2.Signal=GPIO_Input
+PC3.GPIOParameters=GPIO_PuPd
+PC3.GPIO_PuPd=GPIO_PULLUP
+PC3.Locked=true
+PC3.Signal=GPIO_Input
+PC4.GPIOParameters=GPIO_PuPd
+PC4.GPIO_PuPd=GPIO_PULLUP
+PC4.Locked=true
+PC4.Signal=GPIO_Input
+PC5.GPIOParameters=GPIO_PuPd
+PC5.GPIO_PuPd=GPIO_PULLUP
+PC5.Locked=true
+PC5.Signal=GPIO_Input
 PC6.GPIOParameters=GPIO_Speed,GPIO_Label
 PC6.GPIO_Label=Data0
 PC6.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
@@ -157,6 +295,10 @@ PC9.GPIO_Label=Data3
 PC9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC9.Locked=true
 PC9.Signal=GPIO_Output
+PD2.GPIOParameters=GPIO_PuPd
+PD2.GPIO_PuPd=GPIO_PULLUP
+PD2.Locked=true
+PD2.Signal=GPIO_Input
 PH0\ -\ OSC_IN.Locked=true
 PH0\ -\ OSC_IN.Mode=HSE-External-Clock-Source
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
